--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,6 @@
-cmake_minimum_required (VERSION 2.6)
-project (sudoku)
+project(sudoku_master)
 
-set (SRCS src/main.cpp src/solver.cpp)
+set(ENV{VSLANG} 1033)
 
-include_directories(include range-v3/include)
-
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++17 -fconcepts -Irange-v3/include")
-
-add_executable (sudoku ${SRCS})
+add_subdirectory(solver)
+add_subdirectory(test)
