converted chunk_view and join_with_view to std::ranges.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,4 +10,8 @@ add_executable (sudoku_test ${SRCS})
 target_include_directories(sudoku_test PUBLIC ../nanorange ../include)
 target_link_libraries(sudoku_test PRIVATE Catch2::Catch2)
 
-target_compile_options(sudoku_test PUBLIC /std:c++latest /Z7 /permissive-)
+if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(sudoku_test PUBLIC /std:c++latest /Z7 /permissive-)
+else()
+    target_compile_options(sudoku_test PUBLIC -std=c++20)
+endif()
